@@ -1,4 +1,4 @@
-# Script to build GMic-Qt for digiKam bundle.
+# Script to build GMic-Qt plugin for digiKam bundle.
 #
 # Copyright (c) 2015-2022 by Gilles Caulier  <caulier dot gilles at gmail dot com>
 #
