@@ -196,6 +196,7 @@ cmake $ORIG_WD/../3rdparty \
 
 cmake --build . --config RelWithDebInfo --target ext_gmic_qt    -- -j$CPU_CORES
 cmake --build . --config RelWithDebInfo --target ext_mosaicwall -- -j$CPU_CORES
+cmake --build . --config RelWithDebInfo --target ext_flowview   -- -j$CPU_CORES
 
 mv -f $INSTALL_PREFIX/libexec/qt5/plugins/digikam/editor/*.so $INSTALL_PREFIX/lib/plugins/digikam/editor/
 # Install GmicQt plugin debug symbols.
